# RemindMine

./: .env.example  AI_PROVIDER_README.md  CHANGELOG_POLLING.md  DUPLICATION_PREVENTION.md  Dockerfile  README.md  WEB_UI_README.md  cli.py  debug_rag.py  docker-compose.yml  main.py  pyproject.toml  rag_separation_example.py  start.bat  test_advice_workflow.py  test_fixed_journals.py  test_journals.py  test_journals_detailed.py  test_setup.py  test_web_ui.py  update.bat
.copilot/: config.json
redmine/: .env.example  README.md  docker-compose.yml  start-redmine.sh
src/remindmine/: __init__.py  ai_providers.py  app.py  chromadb_admin.py  config.py  pending_advice.py  rag_service.py  redmine_client.py  scheduler.py  summary_cache.py  summary_service.py  web_config.py  web_routes.py
src/remindmine/prompts/: advice.txt  content_summary.txt  journal_summary.txt  summary.txt  unified_issue_summary.txt
src/remindmine/rag/: __init__.py  indexer.py  searcher.py  shared.py
src/remindmine/static/css/: style.css
src/remindmine/static/js/: app.js
src/remindmine/templates/: chromadb_admin.html  index.html
