[project]
name = "remindmine"
version = "0.1.0"
description = "Redmine AI Agent with ChromaDB and Ollama"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "chromadb>=0.4.15",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
]
